dark mode and bug fixes

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ html, body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  background-color: #555555;
 }
 #notes-container {
   height: 100%;
@@ -15,10 +16,12 @@ html, body {
   box-sizing: border-box;
 }
 .quill {
-  height: 100%;
+  height: 93vh;
   box-sizing: border-box;
   width: calc(100% - 300px);
   float: left;
+  background-color: #000000;
+  color: #ffffff;
 }
 .ql-container {
   box-sizing: border-box;
@@ -29,7 +32,7 @@ html, body {
   cursor: text;
 }
 .MuiListItem-root.Mui-selected {
-  background-color: #d4d8e8 !important;
+  background-color: #333333 !important;
 }
 .no-note-selected {
   font-size: 48px;
